# limbicdb

./: .gitignore  BETA-ENTRANCE-CRITERIA.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH_CHECKLIST.md  PUBLISH_GUIDE.md  README-PHASE1.md  README.md  README.zh-CN.md  RELEASE-NOTES-v1.0.1.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  agent.limbic-shm  agent.limbic-wal  demo.ts  limbic-explain.sh  package-lock.json  package.json  python-sdk-design.md  reddit-post-draft.md  test-python-call.py  test-semantic-demo.ts  tsconfig.json  tsup.config.ts  user-validation-test.sh  verify-default-path-contract.limbic-shm  verify-default-path-contract.limbic-wal  vitest.config.ts
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  config.yml
benchmarks/: performance-baseline.ts  search-benchmark.ts
examples/: basic.ts  coding-agent-memory.ts  durable-semantic-snapshot.ts  personal-assistant-memory.ts  semantic-recall.ts  snapshot-demo.ts
internal/: public-truth.json
limbicdb-python/: README.md  pyproject.toml
limbicdb-python/examples/: basic_usage.py  langchain_integration.py
limbicdb-python/limbicdb/: __init__.py  memory.py
scripts/: check-docs-consistency.js  release-check.js  verify-examples.js  verify-public-contracts.js  verify-simple.js  verify.js
src/: classify.ts  core.ts  decay.ts  embedding-store.ts  index.ts  schema.sql  sqlite.ts  time.ts  types.ts
src/cli/: explain.ts  (+4 more)
test/: contract.test.ts  contract.test.ts.bak  embedding-store.test.ts  integration.test.ts  semantic.test.ts  snapshot-embeddings.test.ts  snapshot-semantic.test.ts  sqlite-store.test.ts
(+7 files in other folders)
