[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbicdb"
version = "0.1.0"
description = "Debuggable memory layer for AI agents"
readme = "README.md"
authors = [{name = "Kousoyu", email = "770668004@qq.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["ai", "memory", "debuggable", "agents", "llm"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Kousoyu/limbicdb"
Repository = "https://github.com/Kousoyu/limbicdb"
Documentation = "https://github.com/Kousoyu/limbicdb"

[tool.setuptools.packages.find]
where = ["."]
include = ["limbicdb*"]